[gd_scene load_steps=8 format=3 uid="uid://b4ymg7l804jgx"]

[ext_resource type="Theme" uid="uid://bimvjqmjjj4jh" path="res://assets/resources/theme/main.tres" id="1_4snts"]
[ext_resource type="Script" uid="uid://d0wkymt7mtvi3" path="res://scr/user_interface/popup_window/popup_windows_content/tags_manager/tag_ui_editor.gd" id="1_iub3x"]
[ext_resource type="Texture2D" uid="uid://dnd32ay7p67xu" path="res://assets/textures/icons/edit.svg" id="3_lstky"]
[ext_resource type="Texture2D" uid="uid://da4q4drae4qnk" path="res://assets/textures/icons/hash.svg" id="3_wxp42"]
[ext_resource type="Script" uid="uid://uac4k17vk0bw" path="res://scr/components/unfocus_when_clicked_outside.gd" id="4_bvhhv"]
[ext_resource type="Texture2D" uid="uid://mwa7yfdar6j8" path="res://assets/textures/icons/delete.svg" id="4_wxp42"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bvhhv"]

[node name="TagUiEditor" type="PanelContainer"]
mouse_behavior_recursive = 1
theme = ExtResource("1_4snts")
theme_type_variation = &"PanelContainerDefault"
script = ExtResource("1_iub3x")

[node name="MainButton" type="Button" parent="."]
layout_mode = 2
mouse_behavior_recursive = 2
mouse_default_cursor_shape = 2
theme_type_variation = &"ButtonSimple"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="HashIconTextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/AspectRatioContainer"]
unique_name_in_owner = true
self_modulate = Color(0.078431375, 0.078431375, 0.078431375, 1)
layout_mode = 2
texture = ExtResource("3_wxp42")
stretch_mode = 5

[node name="HashBackgroundPanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/AspectRatioContainer/HashIconTextureRect"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"WhitePanel"

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -7
theme_override_styles/separator = SubResource("StyleBoxEmpty_bvhhv")

[node name="TagNameLineEdit" type="LineEdit" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"LineEditTag"
text = "tag_name"
max_length = 16
expand_to_text_length = true
caret_blink = true
caret_blink_interval = 0.3

[node name="UnfocusWhenClickedOutsideComponent" type="Node" parent="MarginContainer/HBoxContainer/TagNameLineEdit"]
script = ExtResource("4_bvhhv")
metadata/_custom_type_script = "uid://uac4k17vk0bw"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="EditButton" type="Button" parent="MarginContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "TOOLTIP_EDIT_TAG_NAME"
mouse_behavior_recursive = 2
mouse_default_cursor_shape = 2
theme_type_variation = &"ButtonBlue"
icon = ExtResource("3_lstky")

[node name="DeleteButton" type="Button" parent="MarginContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "TOOLTIP_DELETE_TAG"
mouse_behavior_recursive = 2
mouse_default_cursor_shape = 2
theme_type_variation = &"ButtonRedInverted"
icon = ExtResource("4_wxp42")

[connection signal="pressed" from="MainButton" to="." method="_on_main_button_pressed"]
[connection signal="text_submitted" from="MarginContainer/HBoxContainer/TagNameLineEdit" to="." method="_on_tag_name_line_edit_text_submitted"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/HBoxContainer/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
